<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.05"
        android:scaleType="centerCrop"
        android:src="@drawable/image" />

    <!-- Cabecera -->
    <TextView
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="54dp"
        android:background="@color/header"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Caja alarma -->
    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="16dp"
        android:layout_marginTop="54dp"
        android:layout_marginHorizontal="31dp"
        android:elevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/section1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/nombreAlarma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/nombre_alarma_1"
            android:textColor="@color/text"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/ubuntu_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/section21"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="32dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="23dp"
                android:text="@string/hora_1"
                android:textColor="@color/text"
                android:textSize="48sp"
                android:fontFamily="@font/ubuntu_bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="42dp"
                android:text="@string/manana"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold" />

            <ImageButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="42dp"
                android:src="@drawable/outline_notifications_active_24"
                android:background="@android:color/transparent" />


            <ImageButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/outline_delete_24"
                android:background="@android:color/transparent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/section22"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="32dp"
            android:paddingHorizontal="23dp" >

            <TextView
                android:id="@+id/ball1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:text="L"
                android:background="@drawable/baseline_circle_30"
                android:gravity="center"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="M"
                android:background="@drawable/baseline_circle_30"
                android:gravity="center"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball3"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="M"
                android:background="@drawable/baseline_circle_30"
                android:gravity="center"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball4"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="J"
                android:background="@drawable/baseline_circle_30"
                android:gravity="center"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball5"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="V"
                android:background="@drawable/baseline_circle_30"
                android:gravity="center"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball6"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="S"
                android:background="@drawable/outline_circle_24"
                android:gravity="center"
                android:textColor="@color/inactive_text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball7"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="D"
                android:background="@drawable/outline_circle_24"
                android:gravity="center"
                android:textColor="@color/inactive_text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Caja alarma 2 -->
    <LinearLayout
        android:id="@+id/section3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="31dp"
        android:elevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/section2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/nombreAlarma1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/nombre_alarma_2"
            android:textColor="@color/text"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/ubuntu_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/section31"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="32dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="23dp"
                android:text="@string/hora_2"
                android:textColor="@color/text"
                android:textSize="48sp"
                android:fontFamily="@font/ubuntu_bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="42dp"
                android:text="@string/tarde"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold" />

            <ImageButton
                android:id="@+id/button31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="42dp"
                android:src="@drawable/outline_notifications_active_24"
                android:background="@android:color/transparent" />


            <ImageButton
                android:id="@+id/button32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/outline_delete_24"
                android:background="@android:color/transparent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/section32"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="32dp"
            android:paddingHorizontal="23dp" >

            <TextView
                android:id="@+id/ball31"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:text="L"
                android:background="@drawable/outline_circle_24"
                android:gravity="center"
                android:textColor="@color/inactive_text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball32"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="M"
                android:background="@drawable/baseline_circle_30"
                android:gravity="center"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball33"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="M"
                android:background="@drawable/outline_circle_24"
                android:gravity="center"
                android:textColor="@color/inactive_text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball34"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="J"
                android:background="@drawable/outline_circle_24"
                android:gravity="center"
                android:textColor="@color/inactive_text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball35"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="V"
                android:background="@drawable/outline_circle_24"
                android:gravity="center"
                android:textColor="@color/inactive_text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball36"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="S"
                android:background="@drawable/outline_circle_24"
                android:gravity="center"
                android:textColor="@color/inactive_text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/ball37"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="D"
                android:background="@drawable/outline_circle_24"
                android:gravity="center"
                android:textColor="@color/inactive_text"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Boton crear alarma -->
    <ImageButton
        android:id="@+id/button41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:src="@drawable/button"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/section3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
